# task-board-server

./: CMakeLists.txt  README.md
include/: message.h
src/: main.cpp  message.cpp
tests/: CMakeLists.txt  test_message.cpp
